--- a/style.css
+++ b/style.css
@@ -311,3 +311,62 @@ label {
     }
   }
 }
+
+/* Opgave D */
+.d_card_container {
+  container-type: inline-size;
+  container-name: dcontainer;
+}
+
+.d_card {
+  max-width: 1300px;
+  padding: 20px;
+  margin-inline: auto;
+  background-color: var(--bg-col);
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  gap: 10px;
+
+  h1,
+  h2,
+  h3,
+  p {
+    color: var(--text-color);
+  }
+}
+
+.box {
+  background-color: var(--dark-col);
+  padding: 20px;
+  border-radius: 20px;
+
+  img {
+    border-radius: 50%;
+    aspect-ratio: 1/1;
+    object-fit: cover;
+    width: 30%;
+  }
+
+  &.box:first-child {
+    grid-column: span 2;
+  }
+
+  &.box:nth-child(3n) {
+    grid-row: span 2;
+  }
+
+  &.box:last-child {
+    grid-column: span 2;
+  }
+
+  .title_img {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    gap: 10px;
+  }
+}
+
+.first_p {
+  opacity: 50%;
+}
